--- a/Blue/css/main.css
+++ b/Blue/css/main.css
@@ -1,17 +1,39 @@
 body{
+    background-color:  #badbff;
     width: 500px;
     min-height: 500px;
     margin: 0;
+    
 }
 
 .title{
-    background-color:  #222222;
+    background-color:  #006cdf;
     width: 100%;
     padding: 10px;
 }
 
 .title > h1{
     color: white;
-    font-weight: 100;
+    font-weight: 700;
     margin: 0;
+}
+
+
+body {
+	background: linear-gradient(-45deg, #52eed9, #0099ff, #0059ff, #0400ff);
+	background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
+	height: 100vh;
+}
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
 }
