[ADD] working event catcher

--- a/Blue/css/main.css
+++ b/Blue/css/main.css
@@ -3,13 +3,18 @@ body{
     width: 500px;
     min-height: 500px;
     margin: 0;
-    
+    display: block;
+	text-align: center;
 }
 
 .title{
     background-color:  #006cdf;
     width: 100%;
     padding: 10px;
+	display: flex;
+	flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
 
 .title > h1{
@@ -26,6 +31,21 @@ body {
 	height: 100vh;
 }
 
+.audio_player {
+	width: 500px;
+}
+
+audio::-webkit-media-controls-panel {
+	background-color: #56AEFF;
+  }
+  
+  audio::-webkit-media-controls-volume-slider {
+	background-color: #00fffb;
+	border-radius: 25px;
+	padding-left: 8px;
+	padding-right: 8px;
+  }
+
 @keyframes gradient {
 	0% {
 		background-position: 0% 50%;
@@ -36,4 +56,17 @@ body {
 	100% {
 		background-position: 0% 50%;
 	}
+}
+
+#zorotl_oblit {
+	margin-left: auto;
+  	margin-right: auto;
+	width: 50%;
+}
+
+#logo {
+	display: inline-block;
+	text-align: initial;
+	width: 40px;
+	height: auto;
 }
